# Vulkan-Renderer

./: .gitignore  CMakeLists.txt  README.md
Hypatia/: CMakeLists.txt
Hypatia/include/headers/: Base.h  Camera.h  ERenderLayer.h  Entity.h  FrameGraph.h  Hypatia.h  Material.h  PipelineDesc.h  PresentationSystem.h  RenderPass.h  ResourceLibrary.h  SceneGraph.h  hpyStatus.h  pch.h
Hypatia/include/headers/VulkanBackend/: vkBase.h  vkBaseRenderPass.h  vkBufferFactory.h  vkComputePipeline.h  vkData.h  vkDeviceManager.h  vkDeviceSystem.h  vkDrawPipeline.h  vkEntity.h  vkFrameGraph.h  vkGraphicPipelineSystem.h  vkIPipeline.h  vkIRenderPass.h  vkModel.h  vkPostPipeline.h  vkPresentationManager.h  vkPresentationSystem.h  vkRenderPass.h  vkRenderer.h  vkShader.h  vkUIPipeline.h  vkValidationLayerManager.h
Hypatia/res/shaders/: fragment_shader.glsl  fragment_shader.spv  vertex_shader.glsl
Hypatia/src/: Camera.cpp  Entity.cpp  FrameGraph.cpp  Hypatia.cpp  Material.cpp  PresentationSystem.cpp  RenderPass.cpp  ResourceLibrary.cpp  SceneGraph.cpp  vkBaseRenderPass.cpp  vkBufferFactory.cpp  vkData.cpp  vkDeviceManager.cpp  vkDeviceSystem.cpp  vkEntity.cpp  vkFrameGraph.cpp  vkGraphicPipelineSystem.cpp  vkModel.cpp  vkPresentationManager.cpp  vkPresentationSystem.cpp  vkRenderPass.cpp  vkRenderer.cpp  vkShader.cpp  vkValidationLayerManager.cpp
HypatiaEditor/: App.xaml  App.xaml.cs  HypatiaEditor.sln  MainWindow.xaml  MainWindow.xaml.cs
HypatiaTest/: CMakeLists.txt
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
VulkanRenderer/: CMakeLists.txt
VulkanRenderer/include/headers/: ERenderLayer.h  Hypatia.h  Material.h  PipelineDesc.h  PresentationSystem.h  hpyStatus.h
VulkanRenderer/include/headers/VulkanBackend/: vkBaseRenderPass.h  vkBufferFactory.h  vkComputePipeline.h  vkDrawPipeline.h  vkModel.h  vkRenderer.h  vkShader.h  vkUIPipeline.h  vkUtility.h
VulkanRenderer/res/shaders/: compile.bat  vertex_shader.glsl
VulkanRenderer/src/: Camera.cpp  Hypatia.cpp  Material.cpp  PresentationSystem.cpp  ResourceLibrary.cpp  vkBufferFactory.cpp  vkModel.cpp  vkRenderer.cpp
VulkanRendererTest/: CMakeLists.txt  ParserTest.cpp
